Add Gauss elimination notebook with weird logging behavior

--- a/Gaussian elimination.ipynb
+++ b/Gaussian elimination.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Matrix(object):\n",
+    "import logging\n",
+    "\n",
+    "class LoggerMixin(object):\n",
+    "    @property\n",
+    "    def logger(self):\n",
+    "        name = '.'.join([\n",
+    "            self.__module__,\n",
+    "            self.__class__.__name__,\n",
+    "            str(id(self))\n",
+    "        ])\n",
+    "        logger = logging.getLogger(name)\n",
+    "        chandler = logging.StreamHandler()\n",
+    "        chandler.setLevel(logging.DEBUG)\n",
+    "        formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "        chandler.setFormatter(formatter)\n",
+    "        logger.addHandler(chandler)\n",
+    "        logger.setLevel(logging.DEBUG)\n",
+    "        return logger\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:root:test\n"
+     ]
+    }
+   ],
+   "source": [
+    "import logging\n",
+    "logger = logging.getLogger()\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "logging.debug(\"test\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<StreamHandler stderr (NOTSET)>]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logger.handlers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Matrix(LoggerMixin, object):\n",
     "    def __init__(self, data):\n",
+    "        super().__init__()\n",
     "        n = len(data)\n",
     "        m = len(data[0])\n",
     "        assert all(len(sub_array) == m for sub_array in data)\n",
     "        self.data = [[float(element) for element in row] for row in data]\n",
     "        self.shape = (n, m)\n",
+    "        self.logger.info(\"hello!\")\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.data)\n",
@@ -58,7 +126,7 @@
     "            for _ in range(n)\n",
     "        ])\n",
     "        for j in range(n):\n",
-    "            matrix[j][j] = 1\n",
+    "            matrix[j][j] = 1.0\n",
     "        return matrix\n",
     "        \n",
     "    def is_square(self):\n",
@@ -81,7 +149,7 @@
     "                    key=lambda j: abs(self_copy[j][k])\n",
     "            )))\n",
     "            reorder_op = Matrix([Matrix.identity(n).data[j] for j in row_reordering])\n",
-    "            print(\"reorder_op =\", reorder_op)\n",
+    "            self.logger.info(\"reorder_op =\" + str(reorder_op))\n",
     "            operations_so_far = reorder_op.multiply_by(operations_so_far)\n",
     "#             print(\"operations_so_far =\", operations_so_far)\n",
     "            self_copy = reorder_op.multiply_by(self_copy)\n",
@@ -129,103 +197,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "processing column 0\n",
-      "self_copy = Matrix([\n",
-      "    [3.0, 1.0]\n",
-      "    [4.0, 2.0]\n",
-      "])\n",
-      "reorder_op = Matrix([\n",
-      "    [0.0, 1.0]\n",
-      "    [1.0, 0.0]\n",
-      "])\n",
-      "self_copy = Matrix([\n",
-      "    [4.0, 2.0]\n",
-      "    [3.0, 1.0]\n",
-      "])\n",
-      "normalization_op =  Matrix([\n",
-      "    [0.25, 0.0]\n",
-      "    [0.0, 1]\n",
-      "])\n",
-      "self_copy = Matrix([\n",
-      "    [1.0, 0.5]\n",
-      "    [3.0, 1.0]\n",
-      "])\n",
-      "eliminations_op = Matrix([\n",
-      "    [1, 0.0]\n",
-      "    [-3.0, 1]\n",
-      "])\n",
-      "operations_so_far = Matrix([\n",
-      "    [0.0, 0.25]\n",
-      "    [1.0, -0.75]\n",
-      "])\n",
-      "self_copy = Matrix([\n",
-      "    [1.0, 0.5]\n",
-      "    [0.0, -0.5]\n",
-      "])\n",
-      "\n",
-      "\n",
-      "processing column 1\n",
-      "self_copy = Matrix([\n",
-      "    [1.0, 0.5]\n",
-      "    [0.0, -0.5]\n",
-      "])\n",
-      "reorder_op = Matrix([\n",
-      "    [1.0, 0.0]\n",
-      "    [0.0, 1.0]\n",
-      "])\n",
-      "self_copy = Matrix([\n",
-      "    [1.0, 0.5]\n",
-      "    [0.0, -0.5]\n",
-      "])\n",
-      "normalization_op =  Matrix([\n",
-      "    [1, 0.0]\n",
-      "    [0.0, -2.0]\n",
-      "])\n",
-      "self_copy = Matrix([\n",
-      "    [1.0, 0.5]\n",
-      "    [0.0, 1.0]\n",
-      "])\n",
-      "eliminations_op = Matrix([\n",
-      "    [1, -0.5]\n",
-      "    [0.0, 1]\n",
-      "])\n",
-      "operations_so_far = Matrix([\n",
-      "    [1.0, -0.5]\n",
-      "    [-2.0, 1.5]\n",
-      "])\n",
-      "self_copy = Matrix([\n",
-      "    [1.0, 0.0]\n",
-      "    [0.0, 1.0]\n",
-      "])\n",
-      "\n",
-      "\n",
-      "X_inverse =  Matrix([\n",
-      "    [1.0, -0.5]\n",
-      "    [-2.0, 1.5]\n",
-      "])\n"
+      "2019-10-08 13:00:56,948 - __main__.Matrix.4508182624 - INFO - hello!\n",
+      "INFO:__main__.Matrix.4508182624:hello!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [1.0, 0.0]\n",
-       "    [0.0, 1.0]\n",
-       "])"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "X = Matrix([\n",
+    "    [1, 0],\n",
+    "    [0, 1]\n",
+    "])\n",
+    "# X.invert()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X = Matrix([\n",
     "    [3, 1],\n",
@@ -238,100 +234,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "new_row_ordering [2, 1, 0]\n",
-      "result = Matrix([\n",
-      "    [0, 0, 1]\n",
-      "    [0, 1, 0]\n",
-      "    [1, 0, 0]\n",
-      "])\n",
-      "self_changed = Matrix([\n",
-      "    [3.0, 0.0, 1.0]\n",
-      "    [2.0, 1.0, 0.0]\n",
-      "    [1.0, 2.0, 0.0]\n",
-      "])\n",
-      "new_row_ordering [0, 2, 1]\n",
-      "result = Matrix([\n",
-      "    [0, 0, 1]\n",
-      "    [1, 0, 0]\n",
-      "    [0, 1, 0]\n",
-      "])\n",
-      "self_changed = Matrix([\n",
-      "    [3.0, 0.0, 1.0]\n",
-      "    [1.0, 2.0, 0.0]\n",
-      "    [2.0, 1.0, 0.0]\n",
-      "])\n",
-      "new_row_ordering [0, 1, 2]\n",
-      "result = Matrix([\n",
-      "    [0, 0, 1]\n",
-      "    [1, 0, 0]\n",
-      "    [0, 1, 0]\n",
-      "])\n",
-      "self_changed = Matrix([\n",
-      "    [3.0, 0.0, 1.0]\n",
-      "    [1.0, 2.0, 0.0]\n",
-      "    [2.0, 1.0, 0.0]\n",
-      "])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [0, 0, 1]\n",
-       "    [1, 0, 0]\n",
-       "    [0, 1, 0]\n",
-       "])"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Matrix([\n",
-    "    [1, 2, 0],\n",
-    "    [2, 1, 0],\n",
-    "    [3, 0, 1]\n",
-    "]).invert()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 2, 1]\n",
-      "[0, 1, 2]\n",
-      "[0, 1, 2]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [1, 0, 0]\n",
-       "    [0, 1, 0]\n",
-       "    [0, 0, 1]\n",
-       "])"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Matrix([\n",
     "    [1, 0, 0],\n",
@@ -342,41 +247,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Matrix([\n",
-      "    [1, 0]\n",
-      "    [0, 1]\n",
-      "])\n",
-      "Matrix([\n",
-      "    [1, 0]\n",
-      "    [0, 1]\n",
-      "])\n",
-      "Matrix([\n",
-      "    [1, 0]\n",
-      "    [0, 1]\n",
-      "])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [1, 0]\n",
-       "    [0, 1]\n",
-       "])"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "Matrix([\n",
+    "    [2, 5, 0],\n",
+    "    [1, 0, 1],\n",
+    "    [1, 2, 0],\n",
+    "]).invert()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "Matrix([\n",
     "    [1, 0],\n",
@@ -386,34 +272,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<list_reverseiterator object at 0x104c99cf8>\n",
-      "Matrix([\n",
-      "    [1, 0]\n",
-      "    [0, 1]\n",
-      "])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [1, 0]\n",
-       "    [0, 1]\n",
-       "])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Matrix([\n",
     "    [2, 0],\n",
@@ -423,34 +284,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<list_reverseiterator object at 0x104ca2320>\n",
-      "Matrix([\n",
-      "    [0, 1]\n",
-      "    [1, 0]\n",
-      "])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [0, 1]\n",
-       "    [1, 0]\n",
-       "])"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Matrix([\n",
     "    [1, 0],\n",
@@ -460,36 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<list_reverseiterator object at 0x1042e2f98>\n",
-      "Matrix([\n",
-      "    [0, 1, 0]\n",
-      "    [0, 0, 1]\n",
-      "    [1, 0, 0]\n",
-      "])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [0.0, 2.0, 0.0]\n",
-       "    [0.0, 0.0, 1.0]\n",
-       "    [1.0, 0.0, 0.0]\n",
-       "])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Matrix([\n",
     "    [1, 0, 0],\n",
@@ -511,45 +320,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [1.0]\n",
-       "])"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Matrix([[0.5]]).multiply_by(Matrix([[2]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [1.0, 2.0]\n",
-       "    [3.0, 4.0]\n",
-       "])"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Matrix([\n",
     "    [1, 2],\n",
@@ -562,23 +344,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [2.0, 1.0]\n",
-       "    [4.0, 3.0]\n",
-       "])"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Matrix([\n",
     "    [1, 2],\n",
@@ -591,23 +359,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [2.0, 4.0]\n",
-       "    [6.0, 8.0]\n",
-       "])"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Matrix([\n",
     "    [1, 2],\n",
@@ -620,23 +374,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Matrix([\n",
-       "    [1.0, 4.0]\n",
-       "    [3.0, 8.0]\n",
-       "])"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Matrix([\n",
     "    [1, 2],\n",
