Update logger demo

--- a/Logger demo.ipynb
+++ b/Logger demo.ipynb
@@ -24,8 +24,10 @@
     "            str(id(self))\n",
     "        ])\n",
     "        logger = logging.getLogger(name)\n",
+    "        if (logger.hasHandlers()):\n",
+    "            logger.handlers.clear()\n",
     "        chandler = logging.StreamHandler()\n",
-    "        chandler.setLevel(logging.DEBUG)\n",
+    "#         chandler.setLevel(logging.DEBUG)\n",
     "        formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
     "        chandler.setFormatter(formatter)\n",
     "        logger.addHandler(chandler)\n",
@@ -57,7 +59,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-10-08 12:56:26,735 - __main__.Thing.4576704720 - INFO - hello there!\n"
+      "2019-10-08 13:10:08,421 - __main__.Thing.4510259968 - INFO - hello there!\n"
      ]
     }
    ],
@@ -74,14 +76,49 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-10-08 12:56:26,746 - __main__.Thing.4576704720 - DEBUG - whoa\n",
-      "2019-10-08 12:56:26,746 - __main__.Thing.4576704720 - DEBUG - whoa\n"
+      "2019-10-08 13:10:08,433 - __main__.Thing.4510259968 - DEBUG - whoa\n"
      ]
     }
    ],
    "source": [
     "t.do_the_thing()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger = logging.getLogger(\"another logger\")\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "logging.debug(\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2019-10-08 13:10:08,467 - __main__.Thing.4510259968 - DEBUG - whoa\n",
+      "DEBUG:__main__.Thing.4510259968:whoa\n"
+     ]
+    }
+   ],
+   "source": [
+    "t.do_the_thing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
