Fix typo in logger demo

--- a/Logger demo.ipynb
+++ b/Logger demo.ipynb
@@ -59,7 +59,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-10-08 13:10:08,421 - __main__.Thing.4510259968 - INFO - hello there!\n"
+      "2019-10-08 14:43:50,159 - __main__.Thing.4554623576 - INFO - hello there!\n"
      ]
     }
    ],
@@ -76,7 +76,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-10-08 13:10:08,433 - __main__.Thing.4510259968 - DEBUG - whoa\n"
+      "2019-10-08 14:43:50,171 - __main__.Thing.4554623576 - DEBUG - whoa\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
    "source": [
     "logger = logging.getLogger(\"another logger\")\n",
     "logger.setLevel(logging.DEBUG)\n",
-    "logging.debug(\"test\")"
+    "logger.debug(\"test\")"
    ]
   },
   {
@@ -104,8 +104,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-10-08 13:10:08,467 - __main__.Thing.4510259968 - DEBUG - whoa\n",
-      "DEBUG:__main__.Thing.4510259968:whoa\n"
+      "2019-10-08 14:43:50,197 - __main__.Thing.4554623576 - DEBUG - whoa\n"
      ]
     }
    ],
