Update gauss elimination example

--- a/linear_algebra/gauss jordan elimination.ipynb
+++ b/linear_algebra/gauss jordan elimination.ipynb
@@ -6,29 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy"
+    "import copy\n",
+    "import logging"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
-    "\n",
     "class LoggerMixin(object):\n",
     "    @property\n",
     "    def logger(self):\n",
     "        name = '.'.join([\n",
     "            self.__module__,\n",
-    "            self.__class__.__name__,\n",
-    "            str(id(self))\n",
+    "            self.__class__.__name__\n",
     "        ])\n",
     "        logger = logging.getLogger(name)\n",
+    "        if (logger.hasHandlers()):\n",
+    "            logger.handlers.clear()\n",
     "        chandler = logging.StreamHandler()\n",
-    "        chandler.setLevel(logging.DEBUG)\n",
-    "        formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "        formatter = logging.Formatter('%(name)s - %(levelname)s \\n%(message)s')\n",
     "        chandler.setFormatter(formatter)\n",
     "        logger.addHandler(chandler)\n",
     "        logger.setLevel(logging.DEBUG)\n",
@@ -37,47 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "DEBUG:root:test\n"
-     ]
-    }
-   ],
-   "source": [
-    "import logging\n",
-    "logger = logging.getLogger()\n",
-    "logger.setLevel(logging.DEBUG)\n",
-    "logging.debug(\"test\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<StreamHandler stderr (NOTSET)>]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "logger.handlers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +48,6 @@
     "        assert all(len(sub_array) == m for sub_array in data)\n",
     "        self.data = [[float(element) for element in row] for row in data]\n",
     "        self.shape = (n, m)\n",
-    "        self.logger.info(\"hello!\")\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.data)\n",
@@ -138,8 +96,8 @@
     "        self_copy = self.copy()\n",
     "\n",
     "        for k in range(n):\n",
-    "            print(f\"processing column {k}\")\n",
-    "            print(\"self_copy =\", self_copy)\n",
+    "            self.logger.debug(f\"processing column {k}\")\n",
+    "            self.logger.debug(\"self_copy = \" + str(self_copy))\n",
     "\n",
     "            # reorder rows\n",
     "            row_reordering = \\\n",
@@ -149,20 +107,18 @@
     "                    key=lambda j: abs(self_copy[j][k])\n",
     "            )))\n",
     "            reorder_op = Matrix([Matrix.identity(n).data[j] for j in row_reordering])\n",
-    "            self.logger.info(\"reorder_op =\" + str(reorder_op))\n",
+    "            self.logger.debug(\"reorder_op = \" + str(reorder_op))\n",
     "            operations_so_far = reorder_op.multiply_by(operations_so_far)\n",
-    "#             print(\"operations_so_far =\", operations_so_far)\n",
     "            self_copy = reorder_op.multiply_by(self_copy)\n",
-    "            print(\"self_copy =\", self_copy)\n",
+    "            self.logger.debug(\"self_copy = \" + str(self_copy))\n",
     "\n",
     "            # normalize this row\n",
     "            normalization_op = Matrix.identity(n)\n",
     "            normalization_op[k][k] = 1.0 / self_copy[k][k]\n",
-    "            print(\"normalization_op = \", normalization_op)\n",
+    "            self.logger.debug(\"normalization_op = \" + str(normalization_op))\n",
     "            operations_so_far = normalization_op.multiply_by(operations_so_far)\n",
-    "#             print(\"operations_so_far =\", operations_so_far)\n",
     "            self_copy = normalization_op.multiply_by(self_copy)\n",
-    "            print(\"self_copy =\", self_copy)\n",
+    "            self.logger.debug(\"self_copy = \" + str(self_copy))\n",
     "\n",
     "            # eliminate the other rows\n",
     "            eliminations_op = Matrix.identity(n)\n",
@@ -170,14 +126,14 @@
     "                if j == k:\n",
     "                    continue\n",
     "                eliminations_op[j][k] = -1.0 * self_copy[j][k]\n",
-    "            print(\"eliminations_op =\", eliminations_op)\n",
+    "            self.logger.debug(\"eliminations_op = \" + str(eliminations_op))\n",
     "            operations_so_far = eliminations_op.multiply_by(operations_so_far)\n",
-    "            print(\"operations_so_far =\", operations_so_far)\n",
+    "            self.logger.debug(\"operations_so_far = \" + str(operations_so_far))\n",
     "            self_copy = eliminations_op.multiply_by(self_copy)\n",
-    "            print(\"self_copy =\", self_copy)\n",
+    "            self.logger.debug(\"self_copy = \" + str(self_copy))\n",
     "\n",
-    "            print(\"\\n\")\n",
-    "\n",
+    "            self.logger.debug(f\"done with column {k}\\n\")\n",
+    "            \n",
     "        return operations_so_far\n"
    ]
   },
@@ -197,18 +153,266 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-10-08 13:00:56,948 - __main__.Matrix.4508182624 - INFO - hello!\n",
-      "INFO:__main__.Matrix.4508182624:hello!\n"
+      "__main__.Matrix - DEBUG \n",
+      "processing column 0\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "reorder_op = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "normalization_op = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "eliminations_op = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [-0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "operations_so_far = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "done with column 0\n",
+      "\n",
+      "__main__.Matrix - DEBUG \n",
+      "processing column 1\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "reorder_op = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "normalization_op = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "eliminations_op = Matrix([\n",
+      "    [1.0, -0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "operations_so_far = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "done with column 1\n",
+      "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [1.0, 0.0]\n",
+       "    [0.0, 1.0]\n",
+       "])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "X = Matrix([\n",
+    "    [1, 0],\n",
+    "    [0, 1]\n",
+    "])\n",
+    "X.invert()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "__main__.Matrix - DEBUG \n",
+      "processing column 0\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [3.0, 1.0]\n",
+      "    [4.0, 2.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "reorder_op = Matrix([\n",
+      "    [0.0, 1.0]\n",
+      "    [1.0, 0.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [4.0, 2.0]\n",
+      "    [3.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "normalization_op = Matrix([\n",
+      "    [0.25, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.5]\n",
+      "    [3.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "eliminations_op = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [-3.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "operations_so_far = Matrix([\n",
+      "    [0.0, 0.25]\n",
+      "    [1.0, -0.75]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.5]\n",
+      "    [0.0, -0.5]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "done with column 0\n",
+      "\n",
+      "__main__.Matrix - DEBUG \n",
+      "processing column 1\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.5]\n",
+      "    [0.0, -0.5]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "reorder_op = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.5]\n",
+      "    [0.0, -0.5]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "normalization_op = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, -2.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.5]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "eliminations_op = Matrix([\n",
+      "    [1.0, -0.5]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "operations_so_far = Matrix([\n",
+      "    [1.0, -0.5]\n",
+      "    [-2.0, 1.5]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "self_copy = Matrix([\n",
+      "    [1.0, 0.0]\n",
+      "    [0.0, 1.0]\n",
+      "])\n",
+      "__main__.Matrix - DEBUG \n",
+      "done with column 1\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Matrix([\n",
+       "    [1.0, -0.5]\n",
+       "    [-2.0, 1.5]\n",
+       "])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = Matrix([\n",
+    "    [3, 1],\n",
+    "    [4, 2]\n",
+    "])\n",
+    "X.invert()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger = logging.getLogger(\"another logger\")\n",
+    "logger.setLevel(logging.DEBUG)\n",
+    "logging.debug(\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "X = Matrix([\n",
     "    [1, 0],\n",
